# process-scope

./: .dockerignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  docker-compose.yml
src/: ClickableCard.cpp  ClickableCard.h  Controller.cpp  Controller.h  CpuStats.h  MemoryStats.h  MetricChartView.cpp  MetricChartView.h  NetworkStats.h  OsMetricsProvider.cpp  OsMetricsProvider.h  ProcessDetailView.cpp  ProcessDetailView.h  ProcessDetails.h  ProcessInfo.h  ProcessTableView.cpp  ProcessTableView.h  SystemTotals.h  TotalMetricsView.cpp  TotalMetricsView.h  Viewer.cpp  Viewer.h  Viewer.ui  main.cpp
